# column-intelligence

./: .gitignore  pyproject.toml  requirements.txt
src/column_intelligence/: __init__.py  engine.py  test_engine.py  types.py
src/column_intelligence/nlp/: embedding.py  entity_signals.py  loader.py  test.py
src/column_intelligence/semantic/: decision_engine.py  scoring.py  weights.py
src/column_intelligence/signals/: alphanumeric.py  boolean_binary.py  cardinality.py  categorical.py  date_like.py  distribution.py  identifier.py  numeric.py  orchestrator.py  regex_pattern.py  string.py  structural.py
src/column_intelligence/signals/nlp/: entity_signals.py  loader.py  semantic.py  semantic_anchors.py
src/column_intelligence/signals/statistical/: alphanumeric.py  boolean_binary.py  cardinality.py  categorical.py  date_like.py  distribution.py  identifier.py  numeric.py  regex_pattern.py  string.py  structural.py
tests/: test_integer_signal.py  test_numeric_signal.py  test_positive_signal.py
