[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "column-intelligence"
version = "0.1.0"
description = "Hybrid column type inference engine using statistical profiling and NLP signals."
authors = [
    { name = "Omar Saouri" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0"
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7.0"
]

[tool.setuptools.packages.find]
where = ["src"]
